--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -96,7 +96,7 @@
   gap: 16px;
 }
 
-.product-card-btns .btn-primary {
+.product-card-btns :is(:nth-child(1), :nth-child(2)) {
   border: 0;
   background-color: var(--primary-sky-400);
   font-size: 1rem;
