--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -1,5 +1,4 @@
 .product-card {
-  /* border: 1px solid var(--base-gray-50); */
   border-radius: 15px;
   color: var(--base-gray-50);
   overflow: hidden;
@@ -8,7 +7,7 @@
 
 .product-card-img {
   width: 100%;
-  height: 200px;
+  height: 230px;
   transform: scale(1);
   transition: transform 300ms;
   object-fit: cover;
@@ -28,8 +27,8 @@
 .product-card-bg-img {
   position: absolute;
   z-index: -1;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   transform: scale(1);
   inset: 0;
   object-fit: cover;
@@ -45,13 +44,11 @@
   flex-direction: column;
   justify-content: space-around;
   gap: 2rem;
-  width: 100%;
-  height: 100%;
-  padding: 2rem 1rem;
+  /* width: 100%;
+  height: 100%; */
+  padding: 1.5rem 1rem;
   border-top: 1px solid rgb(255 255 255 / 0.5);
   background-color: rgb(0 0 0 / 0.6);
-  /* backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px); */
   opacity: 1;
 }
 
@@ -79,46 +76,65 @@
 }
 
 .product-card-title {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 400;
-  /* color: var(--primary-sky-400); */
 }
 
 .product-card-price {
-  /* color: var(--primary-sky-400); */
   font-size: 1.1rem;
-  background-color: var(--primary-sky-400);
+  background-color: var(--primary-sky-600);
 }
 
 .product-card-btns {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 16px;
 }
 
-.product-card-btns :is(:nth-child(1), :nth-child(2)) {
+.product-card-btns > button {
+  height: max-content;
+  cursor: pointer;
+}
+
+.product-card-btns > button:is(:nth-child(1), :nth-child(2)) {
   border: 0;
-  background-color: var(--primary-sky-400);
-  font-size: 1rem;
+  border-radius: 100vw;
+  font-size: 0.9rem;
   color: var(--base-gray-50);
   box-shadow: -3px 3px 0 var(--primary-sky-300);
+  padding-inline: 1rem;
+  padding-block: 0.8rem;
 }
-.product-card-btns .btn-primary:nth-child(2) {
+
+.product-card-btns button:nth-child(1) {
+  background-color: var(--primary-sky-500);
+  transition: background-color 100ms linear;
+}
+.product-card-btns button:nth-child(2) {
   background-color: transparent;
-  border: 1px solid var(--primary-sky-300);
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent;
+  transition: border-color 100ms linear;
 }
-.product-card-btns .btn-primary:hover {
-  box-shadow: 0px 0px 0 var(--primary-sky-300);
+.product-card-btns > button:nth-child(1):hover {
+  background-color: var(--primary-sky-400);
 }
+.product-card-btns > button:nth-child(2):hover {
+  border-color: var(--primary-sky-300);
+}
+
 .product-card-favorite {
-  width: 50px;
-  height: 50px;
-  padding: 8px;
+  width: 45px;
+  height: 45px;
+  padding: 6px;
   border: 0;
   border-radius: 50%;
   background-color: rgb(56 191 248 / 0.1);
   color: var(--primary-sky-400);
   cursor: pointer;
+  transition: background-color 100ms linear;
 }
 
 .product-card-favorite:hover {
