--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -16,13 +16,12 @@
 .signin .control {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
 }
 
 .signin label {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: var(--primary-sky-100);
-  margin-block: 0 14px;
+  margin-block: 0 10px;
 }
 
 .signin input {
@@ -42,7 +41,7 @@
 
 .signin input::placeholder {
   color: var(--base-gray-400);
-  font-size: 1rem;
+  font-size: 0.95rem;
 }
 
 .signin .signin_show_password {
@@ -65,7 +64,7 @@
   font-size: 1.2rem;
   color: var(--primary-sky-50);
   cursor: pointer;
-  margin-top: 1rem;
+  margin-block-start: 1rem;
 }
 
 .signin .auth-btn:hover {
@@ -95,20 +94,6 @@
   margin: 1.5rem 0;
   text-align: center;
 }
-
-/* .github {
-  font-size: 1.2rem;
-  padding: 1rem;
-  width: 100%;
-  background: #25292e;
-  color: #ffffff;
-  margin-top: 1rem;
-  border: none;
-  transition: all 0.2s;
-}
-.github:hover {
-  box-shadow: 0 0 5px #25292e;
-} */
 
 .signin-container .loader {
   width: 29px;
