--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,5 +1,5 @@
 .signup-container {
-  padding: 1.5rem;
+  padding: 2rem 1.5rem;
   border-radius: 4px;
   background-color: var(--primary-sky-900);
   color: var(--primary-sky-50);
