reduced margin in signup signin and add toy for small devices

--- a/src/pages/SignIn/SignIn.css
+++ b/src/pages/SignIn/SignIn.css
@@ -9,6 +9,12 @@
   margin-block: 200px 150px;
 }
 
+@media (max-width: 768px) {
+  .signin-container {
+    margin-block: 100px 80px;
+  }
+}
+
 .signin > * + * {
   margin-block-start: 2rem;
 }
