--- a/src/pages/MyToys/MyToys.css
+++ b/src/pages/MyToys/MyToys.css
@@ -1,14 +1,32 @@
 .my-toys-container {
-  margin-block: 120px;
+  margin-block: 150px;
   margin-inline: auto;
-  max-inline-size: 1600px;
+  max-inline-size: 1400px;
   color: var(--primary-sky-50);
 }
+
+.my-toys-top-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-block-end: 30px;
+}
+
+.my-toys-top-header div:first-child{
+  font-size: clamp(1.5rem, 1.7vw, 2rem);
+}
+
+.my-toys-top-header div:first-child > span{
+  font-size: 0.9rem;
+  color: var(--base-gray-300);
+}
+
 .my-toys-container table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  border: 1px solid var(--primary-sky-900);
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .my-toys-container th {
@@ -19,7 +37,7 @@
 
 .my-toys-container td {
   text-align: left;
-  padding-inline: 16px;
+  padding-inline: 20px;
   padding-block: 8px;
 }
 
@@ -90,7 +108,7 @@
   gap: 3px;
 }
 
-.my-toys-container .sort-container {
+/* .my-toys-container .sort-container {
   display: flex;
   justify-content: end;
   align-items: center;
@@ -103,4 +121,4 @@
 .my-toys-container .sort {
   padding: 0.5rem 0.5rem;
   font-size: 1rem;
-}
+} */
