--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -93,7 +93,7 @@ nav .bar > * {
   color: var(--deep-white-100);
 }
 
-.nav-favorite-list svg:hover{
+.nav-favorite-list svg:hover {
   color: var(--base-gray-400);
 }
 
@@ -116,20 +116,16 @@ nav .bar > * {
     display: none;
   }
 
-  nav li {
-    color: #fff;
-  }
-
   nav ul.open {
     display: block;
     position: fixed;
     top: 70px;
     right: 10px;
-    background-color: rgba(2, 6, 23, 0.9);
+    background-color: var(--primary-sky-900);
     display: flex;
     flex-direction: column;
-    padding: 2rem;
+    padding: 2rem 4rem;
     border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.15);
   }
 }
