--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -43,17 +43,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  gap: 2rem;
-  /* width: 100%;
-  height: 100%; */
+  gap: 12px;
   padding: 1.5rem 1rem;
-  border-top: 1px solid rgb(255 255 255 / 0.5);
+  border-top: 1px solid rgb(255 255 255 / 0.4);
   background-color: rgb(0 0 0 / 0.6);
   opacity: 1;
 }
 
 .product-card-content-layer hr {
-  border-top: 1px solid rgb(255 255 255 / 0.5);
+  border-top: 1px solid rgb(255 255 255 / 0.4);
   border-bottom: 0;
 }
 
