added add to cart feature to product card

--- a/src/components/ui/ProductCard/ProductCard.css
+++ b/src/components/ui/ProductCard/ProductCard.css
@@ -5,9 +5,14 @@
   box-shadow: 2px 2px 0px var(--deep-white-100);
 }
 
+.product-card-img-wrapper {
+  position: relative;
+  height: 230px;
+}
+
 .product-card-img {
   width: 100%;
-  height: 230px;
+  height: 100%;
   transform: scale(1);
   transition: transform 300ms;
   object-fit: cover;
@@ -123,18 +128,25 @@
   border-color: var(--primary-sky-300);
 }
 
-.product-card-favorite {
+.product-card-favorite,
+.product-card-cart-btn {
   width: 45px;
   height: 45px;
   padding: 6px;
   border: 0;
   border-radius: 50%;
-  background-color: rgb(56 191 248 / 0.1);
+  background-color: transparent;
   color: var(--primary-sky-400);
-  cursor: pointer;
   transition: background-color 100ms linear;
+  cursor: pointer;
 }
 
-.product-card-favorite:hover {
+.product-card-favorite {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+:is(.product-card-cart-btn, .product-card-favorite):hover {
   background-color: rgb(56 191 248 / 0.2);
 }
