--- a/src/pages/UpdateToy/UpdateToy.css
+++ b/src/pages/UpdateToy/UpdateToy.css
@@ -71,7 +71,7 @@
   width: 100%;
   padding: 0.6rem;
   font-size: 1rem;
-  color: gray;
+  color: var(--base-gray-700);
   border: 0;
   border-radius: 4px;
   background-color: var(--primary-sky-100);
