--- a/src/index.css
+++ b/src/index.css
@@ -138,8 +138,8 @@ html.lenis {
 
 .loader {
   border: 12px solid #f3f3f3;
+  border-top: 12px solid var(--primary-sky-700);
   border-radius: 50%;
-  border-top: 12px solid blue;
   width: 100px;
   height: 100px;
   -webkit-animation: spin 2s linear infinite; 
