--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -64,7 +64,7 @@ nav .profile-img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 nav .active {
