--- a/src/layouts/Root.css
+++ b/src/layouts/Root.css
@@ -1,34 +1,52 @@
-/* * {
-  color: #fff;
-} */
-
-/* .fixed-background {
+.initial-loading-container {
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -10;
-  width: 100vw;
-  height: 100vh;
-  pointer-events: none;
-  background-color: #000;
+  inset: 0;
+  z-index: 1000;
+  display: grid;
+  place-items: center;
+  background-color: var(--primary-sky-900);
+  transform: translateY(0);
+  transition: transform 300ms;
 }
-.texture,
-.dark-texture-layer {
+
+.initial-loading-container::before {
+  content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-} */
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background-color: var(--primary-sky-400);
+  filter: blur(200px);
+  opacity: 0.8;
+}
 
-/* .texture {
-  background-image: url("../../public/assets/texture-bg2.avif");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
+.initial-loading-container > div {
+  font-size: 4rem;
+  font-size: 72px;
+  /* background: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%); */
+  background: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-/* .dark-texture-layer {
-  background-color: rgba(0, 0, 0, 0.6);
-} */
+.initial-loading-container .initial-loader {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 6px solid #8EC5FC ;
+  border-top: 6px solid #c18af5;
+  border-radius: 50%;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
